--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,6 @@ spring.datasource.password=coderslab
 #spring.mvc.locale=pl_PL
 #spring.mvc.locale-resolver=fixed
 
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate=ERROR
