13 Email sending :: done - IDE connected to Gmail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,11 @@ spring.datasource.password=coderslab
 logging.level.org.springframework.web=INFO
 logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate=ERROR
+
+#JavaMail config
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=charity.put.in.good.hands@gmail.com
+spring.mail.password=rqrgkwpqrytsmxtm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
